[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "matrix-extractor-hacky"
version = "0.1.0"

[dependencies]
chrono = "0.4.4"
csv = "1.0.0"
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.gm-types]
git = "https://github.com/eeeeeta/glitch-in-the-matrix"
branch = "horrible-hack-for-hacky-extractor"
